Fix restore of a tab from a recently-closed browser window

https://codereview.chromium.org/1343833002 introduced a manually-written copy
constructor and assignment operator for TabRestoreService::Tab in order to
accommodate a new member that had to be copied via an explicit Clone() method.
However, that CL failed to copy the fields of TabRestoreService::Entry, the
base class of TabRestoreService::Tab. This problem resulted in not being able
to restore individual tabs from a recently-closed browser window because the ID
of the tab got lost in a copy somewhere along the way and didn't match the one
of the menu item that the user clicked on.

This CL also adds a browsertest that fails without this change.

BUG=622752
TEST=On a desktop system, open 2 tabs, close the browser window and open a new
browser window. In that new window go into the "Recently Closed" section of the
History menu, find the entry that says "2 Tabs", and click on one of the
individual tabs. That tab should be restored in the new window.

Review-Url: https://codereview.chromium.org/2114673002
Cr-Commit-Position: refs/heads/master@{#406523}

Former-commit-id: 3d931371a8a5f795e7b9a559489b50a877f3db8a